1998-11-24  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* Makefile.am (install-exec-hook): Don't exit with an error if we
	haven't created libgoops.so.0

1998-11-23  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* goops/goops.scm: Removed module workaround; Added :use-module on
	the module itself to load object code (which was what the
	workaround did);  Export public primitives defined by the object
	code.

	* goops.h: Added declaration of scm_init_goops_goops_module.

	* goops.c: Use new C level module interface <libguile/modules.h>
	to define and get bindings in the correct module.  (Now the full
	MOP should work!)

	* guile-oops.c: Call scm_init_goops_goops_module instead of
	scm_init_goops in order to postpone module creation until
	requested.
	
	* configure.in: Use aggressive warning messages if CC=gcc.

1998-11-22  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* goops.c: Added #include <libguile/modules.h>
	(scm_init_goops): Use the new C interface to modules.

1998-11-22  Mikael Djurfeldt  <mdj@kenneth>

	* Makefile.am (install-exec-hook): Added: Puts symbolic links to
	the dynamically linked library into the goops module directory.

	* configure.in: Removed unneccesary lines; Added AC_PROG_LN_S.

	* goops/goops.scm: Added workaround so that compiled code and
	interpreted code can coexist in the same module.

1998-11-22  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* goops.h, goops.c: New files.  Port of stklos from STk-3.99.3

	* goops: New directory: Contains the scheme part of stklos.
	